--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="explore_slideshow"><h1>Explore</h1></div>
 
       <div class="project_view">
-        <a href="#music">
+        <a href="https://kyawthetpaingme.github.io/imkyawthetpaing_mymusic/">
           <div class="my_music"><h1>Music App</h1></div>
         </a>
       </div>
