--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-  
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
     <title>Explore : Kyaw Thet Paing</title>
 </head>
 <body>
   <section class="explore" id="explore">
     <div class="container">
-      <div class="explore_slideshow"><h1>Explore</h1></div>
+        <div class="explore_slideshow">
+          <h1>Explore My Web Projects</h1>
+        </div>
 
       <div class="project_view">
+
         <a href="https://kyawthetpaingme.github.io/imkyawthetpaing_mymusic/">
-          <div class="my_music"><h1>Music App</h1></div>
+          <div class="my_music"><ion-icon name="musical-notes"></ion-icon></div>
         </a>
+
+        <a href="https://kyawthetpaingme.github.io/calculator/">
+            <div class="my_calculator"><ion-icon name="calculator"></ion-icon></div>
+          </a>
+
       </div>
       
     </div>
